--- a/ToyProjectManagementApp/Views/ForthTabbar.storyboard
+++ b/ToyProjectManagementApp/Views/ForthTabbar.storyboard
@@ -40,6 +40,7 @@
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="U6b-rX-89L"/>
                                                     <constraint firstAttribute="width" constant="20" id="c8C-pT-3vv"/>
                                                     <constraint firstAttribute="height" constant="20" id="qYD-3v-PGY"/>
                                                 </constraints>
