--- a/ToyProjectManagementApp/Views/Main.storyboard
+++ b/ToyProjectManagementApp/Views/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -23,7 +24,7 @@
                                 <rect key="frame" x="197" y="445" width="20" height="20"/>
                             </activityIndicatorView>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OaA-9G-Zak" customClass="CustomTextField" customModule="ToyProjectManagementApp" customModuleProvider="target">
-                                <rect key="frame" x="14" y="124" width="386" height="50"/>
+                                <rect key="frame" x="14" y="120" width="386" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="HZe-en-DW5"/>
                                 </constraints>
@@ -31,7 +32,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mhe-ak-8pz" customClass="CustomTextField" customModule="ToyProjectManagementApp" customModuleProvider="target">
-                                <rect key="frame" x="14" y="184" width="386" height="50"/>
+                                <rect key="frame" x="14" y="180" width="386" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="5xC-mS-ZxQ"/>
                                 </constraints>
@@ -39,7 +40,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FzF-Hb-qvc">
-                                <rect key="frame" x="14" y="244" width="386" height="50"/>
+                                <rect key="frame" x="14" y="240" width="386" height="50"/>
                                 <color key="backgroundColor" name="primaryColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Q6U-j2-jbv"/>
@@ -109,19 +110,18 @@
                                     <action selector="tabForgotPasswordButton:" destination="vzy-TO-xKb" eventType="touchUpInside" id="sg6-Uc-B5Z"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J1h-ek-O6P">
-                                <rect key="frame" x="14" y="62" width="30" height="34"/>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J1h-ek-O6P">
+                                <rect key="frame" x="14" y="62" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="K1j-7g-Bes"/>
+                                    <constraint firstAttribute="height" constant="30" id="xB9-hI-OjI"/>
                                 </constraints>
                                 <color key="tintColor" name="primaryColor"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" image="arrow.left" catalog="system">
+                                <state key="normal">
                                     <color key="titleColor" name="primaryColor"/>
+                                    <imageReference key="image" image="arrow.left" catalog="system" symbolScale="large"/>
                                 </state>
-                                <buttonConfiguration key="configuration" style="plain" image="arrow.left" catalog="system">
-                                    <color key="baseForegroundColor" name="primaryColor"/>
-                                </buttonConfiguration>
                                 <connections>
                                     <action selector="tapBackButton:" destination="vzy-TO-xKb" eventType="touchUpInside" id="5F6-rd-hoZ"/>
                                 </connections>
@@ -284,19 +284,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tgf-7t-WSk">
-                                <rect key="frame" x="14" y="62" width="30" height="34"/>
+                                <rect key="frame" x="14" y="62" width="30" height="30"/>
                                 <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="7se-MS-vMa"/>
                                     <constraint firstAttribute="width" constant="30" id="qnt-ok-vOJ"/>
                                 </constraints>
                                 <color key="tintColor" name="primaryColor"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="arrow.left" catalog="system"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal">
+                                    <color key="titleColor" name="primaryColor"/>
+                                    <imageReference key="image" image="arrow.left" catalog="system" symbolScale="large"/>
+                                </state>
                                 <connections>
                                     <action selector="tapBackButton:" destination="Kg4-n1-feu" eventType="touchUpInside" id="eg4-9T-QM6"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hiC-Uh-ap7" customClass="CustomTextField" customModule="ToyProjectManagementApp" customModuleProvider="target">
-                                <rect key="frame" x="14" y="124" width="386" height="50"/>
+                                <rect key="frame" x="14" y="120" width="386" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="0B6-Om-YEB"/>
                                 </constraints>
@@ -304,7 +308,7 @@
                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MGo-b3-0vG" customClass="CustomTextField" customModule="ToyProjectManagementApp" customModuleProvider="target">
-                                <rect key="frame" x="14" y="188" width="386" height="50"/>
+                                <rect key="frame" x="14" y="184" width="386" height="50"/>
                                 <color key="tintColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="gUD-2u-w7H"/>
@@ -313,7 +317,7 @@
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VX5-LQ-t0I">
-                                <rect key="frame" x="14" y="248" width="386" height="50"/>
+                                <rect key="frame" x="14" y="244" width="386" height="50"/>
                                 <color key="backgroundColor" name="primaryColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Mv3-nA-jnv"/>
@@ -410,9 +414,16 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hLH-5K-JDZ">
-                                <rect key="frame" x="353.5" y="55" width="46.5" height="34"/>
+                                <rect key="frame" x="370" y="55" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="Mc9-V7-cpR"/>
+                                    <constraint firstAttribute="height" constant="30" id="VRK-rv-QdK"/>
+                                </constraints>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <buttonConfiguration key="configuration" style="plain" image="plus" catalog="system"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal">
+                                    <imageReference key="image" image="plus" catalog="system" symbolScale="large"/>
+                                </state>
                                 <connections>
                                     <action selector="addProjectButtonTap:" destination="UAM-km-w7Y" eventType="touchUpInside" id="7In-Z2-Ygv"/>
                                 </connections>
