기본 로그인(자동 로그인), 프로필관리 창 텍스트 필드 가리는 오류 수정

--- a/ToyProjectManagementApp/Views/UserInformation.storyboard
+++ b/ToyProjectManagementApp/Views/UserInformation.storyboard
@@ -23,7 +23,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RFN-hi-cmK" userLabel="contentView">
-                                        <rect key="frame" x="0.0" y="0.0" width="428" height="493.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="428" height="553.5"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A0d-uB-n21">
                                                 <rect key="frame" x="14" y="14" width="30" height="30"/>
@@ -46,8 +46,8 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="oRY-9V-xjF">
-                                                <rect key="frame" x="14" y="147.5" width="400" height="205"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="70" translatesAutoresizingMaskIntoConstraints="NO" id="oRY-9V-xjF">
+                                                <rect key="frame" x="14" y="167.5" width="400" height="245"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dYG-vh-fUx">
                                                         <rect key="frame" x="0.0" y="0.0" width="400" height="35"/>
@@ -67,7 +67,7 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Ex-OE-R2p">
-                                                        <rect key="frame" x="0.0" y="85" width="400" height="35"/>
+                                                        <rect key="frame" x="0.0" y="105" width="400" height="35"/>
                                                         <subviews>
                                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6RJ-bb-Rxy">
                                                                 <rect key="frame" x="0.0" y="5" width="400" height="22"/>
@@ -84,7 +84,7 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CWq-wL-aBP">
-                                                        <rect key="frame" x="0.0" y="170" width="400" height="35"/>
+                                                        <rect key="frame" x="0.0" y="210" width="400" height="35"/>
                                                         <subviews>
                                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mlW-6A-b5t">
                                                                 <rect key="frame" x="0.0" y="5" width="400" height="22"/>
@@ -103,7 +103,7 @@
                                                 </subviews>
                                             </stackView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rB3-Dh-jKg">
-                                                <rect key="frame" x="14" y="429.5" width="400" height="50"/>
+                                                <rect key="frame" x="14" y="489.5" width="400" height="50"/>
                                                 <color key="backgroundColor" name="primaryColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="HZ6-YU-FOP"/>
@@ -119,7 +119,7 @@
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="oRY-9V-xjF" firstAttribute="leading" secondItem="jyB-gS-PyP" secondAttribute="leading" id="EkU-Qo-gf6"/>
-                                            <constraint firstItem="oRY-9V-xjF" firstAttribute="top" secondItem="jyB-gS-PyP" secondAttribute="bottom" constant="50" id="Ker-ky-tiE"/>
+                                            <constraint firstItem="oRY-9V-xjF" firstAttribute="top" secondItem="jyB-gS-PyP" secondAttribute="bottom" constant="70" id="Ker-ky-tiE"/>
                                             <constraint firstItem="rB3-Dh-jKg" firstAttribute="leading" secondItem="oRY-9V-xjF" secondAttribute="leading" id="TQ4-fl-J1i"/>
                                             <constraint firstItem="oRY-9V-xjF" firstAttribute="trailing" secondItem="jyB-gS-PyP" secondAttribute="trailing" id="Tif-6n-Viy"/>
                                             <constraint firstItem="jyB-gS-PyP" firstAttribute="top" secondItem="A0d-uB-n21" secondAttribute="bottom" constant="20" id="YTX-Zt-t23"/>
@@ -163,6 +163,7 @@
                         <outlet property="nameView" destination="dYG-vh-fUx" id="dYR-JF-788"/>
                         <outlet property="phoneNumberTextField" destination="mlW-6A-b5t" id="Pj8-Iy-AiX"/>
                         <outlet property="phoneNumberView" destination="CWq-wL-aBP" id="YAo-t7-e8m"/>
+                        <outlet property="scrollView" destination="egf-bh-UZl" id="11S-dw-ZdX"/>
                         <outlet property="userInformationLabel" destination="jyB-gS-PyP" id="KvR-H4-yCS"/>
                         <outlet property="writeInformationButton" destination="rB3-Dh-jKg" id="cWh-eK-Kll"/>
                     </connections>
