sf symbol 버전별로 달라서 이미지 안뜨는 오류, 팝업 오토레이아웃 오류 수정

--- a/ToyProjectManagementApp/Views/Popup/AddListPopup.xib
+++ b/ToyProjectManagementApp/Views/Popup/AddListPopup.xib
@@ -39,7 +39,7 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="XXp-ge-eCn">
+                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="XXp-ge-eCn">
                     <rect key="frame" x="14" y="186.66666666666666" width="362" height="45"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aRz-YJ-BFE">
