--- a/ToyProjectManagementApp/Views/Popup/ChangeListTitlePopup.xib
+++ b/ToyProjectManagementApp/Views/Popup/ChangeListTitlePopup.xib
@@ -45,7 +45,7 @@
                     <color key="textColor" red="0.85257214307785034" green="0.015961610037740909" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="JM5-uJ-k40">
+                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="JM5-uJ-k40">
                     <rect key="frame" x="14" y="186.66666666666666" width="362" height="45"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G9r-k4-Q1T">
