--- a/ToyProjectManagementApp/Views/Popup/ForgotPasswordPopup.xib
+++ b/ToyProjectManagementApp/Views/Popup/ForgotPasswordPopup.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -21,28 +21,28 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="yrx-Fa-rLi">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="비밀번호 재설정" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hSZ-N8-anR">
-                    <rect key="frame" x="14" y="73" width="365" height="20.333333333333329"/>
+                    <rect key="frame" x="14" y="14" width="292" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Crg-4d-tvJ" customClass="CustomTextField" customModule="ToyProjectManagementApp" customModuleProvider="target">
-                    <rect key="frame" x="14" y="107.33333333333331" width="365" height="50"/>
+                    <rect key="frame" x="14" y="48.5" width="292" height="50"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="pND-i8-rcZ"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Pw1-Jb-DeA">
-                    <rect key="frame" x="14" y="182.33333333333334" width="365" height="45"/>
+                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Pw1-Jb-DeA">
+                    <rect key="frame" x="14" y="123.5" width="292" height="45"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gka-qx-mJh">
-                            <rect key="frame" x="0.0" y="0.0" width="177.66666666666666" height="45"/>
+                            <rect key="frame" x="0.0" y="0.0" width="141" height="45"/>
                             <color key="backgroundColor" name="primaryColor"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="45" id="hFD-zo-DRF"/>
@@ -55,7 +55,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WFO-XS-2vo">
-                            <rect key="frame" x="187.66666666666663" y="0.0" width="177.33333333333337" height="45"/>
+                            <rect key="frame" x="151" y="0.0" width="141" height="45"/>
                             <color key="backgroundColor" name="primaryColor"/>
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <state key="normal" title="Button"/>
